# Qt-playground

./: README.md
QML/: LineEdit.qml  anchor-layout.qml  element-and-properties.qml  flick.qml  gradients.qml  images.qml  main.qml  mouse.qml  pinch.qml  property-bindings.qml
QML/etc/: qml.sh
QtWidgets/: .gitignore
QtWidgets/HelloWorld/: CMakeLists.txt  main.cpp  main.pro
QtWidgets/Lambda/: CMakeLists.txt  app.cpp
QtWidgets/Layout/: app.cpp  app.pro
QtWidgets/Signal&Slots/: app.cpp  app.h  main.cpp
